# tmc-rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs  wrapper.h
macros/: Cargo.toml
macros/src/: lib.rs
src/: bindings.rs  lib.rs
src/registers/: mod.rs
src/registers/tmc2240/: mod.rs
