[package]
name = "tmc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
log = { version = "0.4.17", default-features = false }
embedded-hal = "0.2.7"
bitfield-struct = "0.5"
tmc-rs-macros = { path = "./macros" }
anyhow = "1.0.71"

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0"
