[package]
name = "tmc-rs-macros"
version = "0.1.0"
authors = ["pwf <aaron.lisman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["extra-traits", "derive"] }
quote = "*"
proc-macro2 = "*"
r3bl_rs_utils = "*"
regex = "1.8.4"
